orders.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: upsidevouge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      # 🔹 INIT CONTAINER (WAIT FOR POSTGRES)
      containers:
        - name: order-service
          image: saivinayy1109/order-service:v1
          ports:
            - containerPort: 5003
