mongo-auth.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-auth
  namespace: upsidevouge
  labels:
    app: mongo-auth
spec:
  clusterIP: None
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
  selector:
    app: mongo-auth
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-auth
  namespace: upsidevouge
  labels:
    app: mongo-auth
spec:
  serviceName: mongo-auth
  replicas: 1
  selector:
    matchLabels:
      app: mongo-auth
  template:
    metadata:
      labels:
        app: mongo-auth
    spec:
      containers:
        - name: mongo-auth
          image: mongo:6.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-auth-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-auth-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
