mongo-product.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-product
  namespace: upsidevouge
  labels:
    app: mongo-product
spec:
  clusterIP: None
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
  selector:
    app: mongo-product
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-product
  namespace: upsidevouge
  labels:
    app: mongo-product
spec:
  serviceName: mongo-product
  replicas: 1
  selector:
    matchLabels:
      app: mongo-product
  template:
    metadata:
      labels:
        app: mongo-product
    spec:
      containers:
        - name: mongo-product
          image: mongo:6.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-product-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-product-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
