postgres-orders.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-orders
  namespace: upsidevouge
  labels:
    app: postgres-orders
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres-orders
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-orders
  namespace: upsidevouge
spec:
  serviceName: postgres-orders
  replicas: 1
  selector:
    matchLabels:
      app: postgres-orders
  template:
    metadata:
      labels:
        app: postgres-orders
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-orders-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-orders-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
