product.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: upsidevouge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: saivinayy1109/product-service:v1
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: upsidevouge
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - port: 5002
      targetPort: 5002
